@@ -1,7 +1,9 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.4.1       4-20-09
+BETA PUBLIC RELEASE VERSION 1.4.1       4-22-09
 #############################################################################
  - NEW FEATURES
+  * Disabled Typemap output by default, added --typemap flag to create typemap
+    output if needed.
 
  - BUG FIXES
   * Added -fno-stack-protector to CXXFLAGS in configure. This fixes the stack
